Now you can see the images in the profile
