# service/api/api-handler.go
@@ -26,9 +26,10 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.DELETE("/users/:username/posts/:postId", rt.deletePhoto)                        // DONE
 	rt.router.POST("/users/:username/posts/:postId/comments", rt.commentPhoto)                // DONE
 	rt.router.DELETE("/users/:username/posts/:postId/comments/:commentId", rt.uncommentPhoto) // DONE
-	rt.router.POST("/users/:username/posts/", rt.uploadPhoto)                                 // DONE
+	rt.router.POST("/users/:username/posts", rt.uploadPhoto)                                  // DONE
 	rt.router.PUT("/users/:username", rt.setMyUserName)                                       // DONE
 	rt.router.GET("/users", rt.searchUser)                                                    // DONE
 	rt.router.GET("/utils/follows", rt.getFollows)                                            // DONE
+	rt.router.GET("/images/:imageId", rt.getImage)                                            // DONE
 	return rt.router
 }
