# webui/src/router/index.js
@@ -4,6 +4,8 @@ import SessionView from "../views/SessionView.vue";
 import changeUsernameView from "../views/ChangeUsernameView.vue";
 import searchView from "../views/SearchView.vue";
 import profileView from "../views/ProfileView.vue";
+import myStreamView from "../views/MyStreamView.vue";
+import uploadView from "../views/UploadView.vue";
 
 const router = createRouter({
 	history: createWebHashHistory(import.meta.env.BASE_URL),
@@ -13,7 +15,9 @@ const router = createRouter({
 		{path: `/users/:username`, component: changeUsernameView},
 		{path: '/some/:id/link', component: HomeView},
 		{path: '/users', component: searchView},
-		{path: `/users/:username/profile`, component: profileView}
+		{path: `/users/:username/profile`, component: profileView},
+		{path: `/users/:username/stream`, component: myStreamView},
+		{path: `/users/:username/posts`, component: uploadView},
 	]
 })
 
